# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = edges-io
description = Module for reading EDGES data and working with EDGES databases.
author = EDGES Collaboration
author_email = steven.g.murray@asu.edu
license = mit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/edges-collab/edges-io
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy
    scipy
    h5py
    read_acq
    cached_property
    bidict
    pyyaml
    rich
    attrs
    toml
    dill
    importlib_metadata; python_version<'3.8'
    psutil
    hickle>=5.0.0.dev0
    astropy>=5.0

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install edges-io[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
dev =
    pre-commit
    pytest


[options.entry_points]
# Add here console scripts like:
console_scripts =
     edges-io = edges_io.cli:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
